--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="register">Register</string>
     <string name="name">Name</string>
     <string name="add_video">Add Video</string>
-    <string name="sign_in">Sign in</string>
+    <string name="sign_in">Sign In</string>
+    <string name="register_u"><u>Register</u></string>
 </resources>
